# SoSe_2025_SWE

./: .pdm-python  README.md  leistungstest.py  main.py  my_classes_Olivia.py  my_classes_lena.py  my_functions.py  pyproject.toml  test.py  test_Olivia.py  test_lena.py
