[project]
name = "SoSe_2025_SWE"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lena Kurzthaler", email = "kl4213@mci4me.at"},
]
dependencies = ["numpy>=2.2.4", "pandas>=2.2.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
